add foundation css

--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "start": "webpack-dev-server"
   },
   "dependencies": {
+    "css-loader": "^0.28.1",
+    "decimal.js": "^7.2.1",
+    "foundation-sites": "^6.3.1",
     "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.3",
     "path": "^0.12.7",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.17.0",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
   },
